<resources>
    <string name="app_name">RecipeApp</string>
    <string name="recipes">My Recipes</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="ingredients">Ingredients</string>
    <string name="recipe_steps">Enter Steps Here</string>
    <string name="web_url">Enter Web Url</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="storage_permission_text">This app needs access to your storage.</string>
    <string name="search">Search recipe</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="https">https://</string>
    <string name="instructions">Instructions</string>
    <string name="list_instructions_here">List instructions here</string>
    <string name="list_ingredients_here">List ingredients here</string>
    <string name="insert_recipe_type">Insert Recipe type here</string>
    <string name="pick_recipe_type">Pick recipe type</string>
</resources>